--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="sorter">
-        <img src="src/assets/akb48LogoLeft.jpg" class="left sort image">
+        <img src="https://i.imgur.com/yURmUmT.jpg" class="left sort image">
 
         <div class="starting start button">Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
@@ -49,7 +49,7 @@
         <div class="finished getimg button">Generate Image</div>
         <div class="finished list button">Generate Text List</div>
 
-        <img src="src/assets/akb48LogoLeft.jpg" class="right sort image">
+        <img src="https://i.imgur.com/yURmUmT.jpg" class="right sort image">
 
         <div class="left sort text"><p></p></div>
         <div class="right sort text"><p></p></div>
