--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <link rel="shortcut icon" href="src/assets/yinyang.ico" type="image/x-icon">
   <link rel="icon" href="src/assets/akb48icon.ico" type="image/x-icon">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="og:site_name" content="AKB48 MEMBER SORTER">
   <meta name="og:description" content="Let's make your AKB48 members ranking.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
   <title>AKB48 MEMBERS SORTER</title>
 
+
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="src/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="src/css/a.css">
 
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2018-12-31.js"></script>
