--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
   <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
   <meta charset="utf-8">
-  <meta name="og:site_name" content="Nogizaka46 Sorter">
-  <meta name="og:description" content="A simple website for sorting Nogizaka46 idols in a formatted list.">
-  <meta name="og:image" content="https://i.imgur.com/ojLl2nG.png">
+  <meta name="og:site_name" content="AKB48 Sorter">
+  <meta name="og:description" content="What is your AKB48 members ranking?">
+  <meta name="og:image" content="https://i.imgur.com/ZlAGXcH.jpg">
   <title>AKB48 MEMBERS SORTER</title>
 
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
