--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <a class="clearsave" style="font-size: 12px">Clear Save Data</a>
         <br><br>
         <p style="font-size: 14px">Created by <a href="https://www.facebook.com/Dasu48TH/">Suda Akari 須田亜香里 Thailand Fanpage </a></p><br>
+        <p style="font-size: 14px"> And <a href="https://www.facebook.com/YamamotoSayakaTHfanpage">Yamamoto Sayaka 山本彩 - Thailand fanpage</a></p><br>
         <p>Sorter for ranking AKB48 members. Pick your members, and hit the Start button.</p>
         <br>
         <p>Keyboard controls during sorting: H/LeftArrow (pick left)<br>
